<resources>
    <string name="app_name">final-project-team_02_6</string>
    <string name="travel_journal">Travel Journal</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="language">Language</string>
    <string name="select_music_prompt" translatable="false">Select Background Music</string>
    <string name="select_font_prompt">Select Font</string>
    <string name="mail">Mail</string>
    <string name="restfultitle">RESTful API Example</string>
    <string name="sendpostrequest">Send POST Request</string>

    <string name="entry_date">Entry Date</string>
    <string name="entry_title">Entry Title</string>

    <string name="add_entry">Add entry</string>

    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
</resources>