<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/editEntryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageBackButton"
        android:layout_marginTop="13dp"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/editEntryDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editEntryTitle"
        android:layout_marginTop="8dp"
        android:hint="@string/description"/>

    <Button
        android:id="@+id/editUpdateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editEntryDesc"
        android:layout_marginTop="16dp"
        android:text="@string/save"/>

    <ImageButton
        android:id="@+id/imageBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_back" />
</RelativeLayout>